--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -L app/index.js",
     "setup-db": "node ./app/db/setup.js"
   },
   "repository": {
