--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -L app/index.js",
-    "setup-db": "node ./app/db/setup.js"
+    "setup-db": "node ./app/db/setup.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
