--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:legacy": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -L app/index.js",
     "setup-db": "node ./app/db/setup.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "jest": "^30.1.1",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.10"
   }
 }
