--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon -L app/index.js",
     "setup-db": "node ./app/db/setup.js",
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "backend-test": "jest --watchAll --verbose --detectOpenHandles --runInBand",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "jest": "^30.1.1",
     "jsdom": "^26.1.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
