--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test:legacy": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -L app/index.js",
     "setup-db": "node ./app/db/setup.js",
-    "start": "node index.js",
+    "start": "node ./app/index.js",
     "test": "jest",
     "backend-test": "jest --watchAll --verbose --detectOpenHandles --runInBand",
     "coverage": "jest --coverage"
